--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 .cabeçalho{ 
-    color: midnightblue;
-    background-color: darkslateblue;
+    color: rgb(150, 252, 255);
+    background-color: rgb(52, 228, 213);
     justify-content: center;
 }
 .introdução{
-    color: indigo;
-    background-color: darkblue;
+    color: rgb(131, 206, 255);
+    background-color: rgb(42, 142, 189);
 }
