--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     background-color: rgb(52, 228, 213);
     justify-content: center;
 }
-.introdução{
+.paragrafo_1{
     color: rgb(131, 206, 255);
     background-color: rgb(42, 142, 189);
 }
