--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     color: rgb(150, 252, 255);
     background-color: rgb(52, 228, 213);
     justify-content: center;
+    display: flex;
+    justify-content: space-around;
+    padding: 24px 0;
 }
 .paragrafo_1{
     color: rgb(131, 206, 255);
