--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@
 .cabeçalho_titulo {
     font-size: 60px;
 }
+.cabeçalho_subtitulo {
+    font-size: 30px;
+}
 
 .paragrafo-introdução {
     text-align: center;
